--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,5 +24,8 @@ jobs:
             dep ensure
         fi
 
+    - name: Move to API directory
+      run: cd api
+
     - name: Build
-      run: go build -v ./api/main.go
+      run: go build -v .
