--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,8 +24,5 @@ jobs:
             dep ensure
         fi
 
-    - name: Move to API directory
-      run: ls -l; cd api
-
     - name: Build
-      run: go build -v .
+      run: go build -v ./api/main.go
