--- a/.github/workflows/dart.yml
+++ b/.github/workflows/dart.yml
@@ -12,7 +12,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v1
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+      with:
+        channel: 'stable' # or: 'dev' or 'beta'
     - name: Install dependencies
       run: flutter pub get
     - name: Run tests
-      run: pub run test
+      run: flutter test
+    - name: Build Flutter
+      run: flutter build apk
